syntax="proto3";

option java_multiple_files=true;
option java_package="in.rk.cal.models";

package models;


enum ErrorCode
{
  MUST_NOT_ONE =0;
  MUST_NOT_THREE=1;
  MUST_NOT_FOUR=2;
}
message SuccessResponse
{
  int32 results=1;
}
message ErrorResponse
{
  int32 input=1;
  ErrorCode error_code=2;
}
message Response
{
  oneof response {
    SuccessResponse success_response=1;
    ErrorResponse error_response=2;
  }
}